src/main/webapp/style.css
.button {
 text-align: center;
 background-color: pink;
 margin: 8px 4px;
 font-size: 30px;
}

#map {
  border: thin solid black;
  height: 500px;
  width: 500px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#chart-container{
    border: thin solid black;
    height:100px;
    width:100px;
    margin-left: 38%;
    margin-right: -38%;
    text-align: center;
}

#background {
    background-color: lightpink;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

#active{
    background-color: lightblue;
    border:black;
    font-size:35px;
}

#navbar{
    text-align: left;
}

#loginbar{
    text-align:right;
}

#cart{
    text-align:right;
    margin-right: 10%;
}

